tests/Semantic/test_2_r07.spl
struct Apple
{
  int weight;
  float round;
};
int test_2_r07()
{
  struct Apple aa;
  float weight_test = 1.0;
  aa.weight = aa + 2;
  return 0;
}
